// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow load custom resources md2html single page with custom resources 1`] = `
"[
  ".revision.meta.json",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search/index.js",
  "_bundle/search/langs/ar.js",
  "_bundle/search/langs/da.js",
  "_bundle/search/langs/de.js",
  "_bundle/search/langs/du.js",
  "_bundle/search/langs/el.js",
  "_bundle/search/langs/es.js",
  "_bundle/search/langs/fi.js",
  "_bundle/search/langs/fr.js",
  "_bundle/search/langs/he.js",
  "_bundle/search/langs/hi.js",
  "_bundle/search/langs/hu.js",
  "_bundle/search/langs/hy.js",
  "_bundle/search/langs/index.js",
  "_bundle/search/langs/it.js",
  "_bundle/search/langs/ja.js",
  "_bundle/search/langs/jp.js",
  "_bundle/search/langs/kn.js",
  "_bundle/search/langs/ko.js",
  "_bundle/search/langs/nl.js",
  "_bundle/search/langs/no.js",
  "_bundle/search/langs/pt.js",
  "_bundle/search/langs/ro.js",
  "_bundle/search/langs/ru.js",
  "_bundle/search/langs/sa.js",
  "_bundle/search/langs/sv.js",
  "_bundle/search/langs/ta.js",
  "_bundle/search/langs/te.js",
  "_bundle/search/langs/th.js",
  "_bundle/search/langs/tr.js",
  "_bundle/search/langs/vi.js",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "index.html",
  "page.html",
  "project/config.html",
  "single-page.html",
  "single-page.json"
]"
`;

exports[`Allow load custom resources md2html single page with custom resources 2`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]}},"router":{"pathname":"index.html","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources 3`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[{"name":"yfm","content":"builder"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"page.html","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources 4`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"project/config.html","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources 5`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"html":"
      <p>Lorem
      </p>/n","headings":[],"meta":{"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"toc":{"title":"Documentation","href":"index.yaml","items":[{"name":"Documentation","href":"#_page","id":"Documentation-RANDOM"},{"name":"Config","href":"#_project_config","id":"Config-RANDOM"}],"base":".","deepBase":0,"singlePage":true}},"router":{"pathname":"single-page.html"},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources 6`] = `"{"data":{"leading":false,"html":"<p>Lorem</p>/n","headings":[],"meta":{"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"toc":{"title":"Documentation","href":"index.yaml","items":[{"name":"Documentation","href":"#_page","id":"Documentation-RANDOM"},{"name":"Config","href":"#_project_config","id":"Config-RANDOM"}],"base":".","deepBase":0,"singlePage":true}},"router":{"pathname":"single-page.html"},"lang":"ru","langs":["ru"]}"`;

exports[`Allow load custom resources md2html with custom resources 1`] = `
"[
  ".revision.meta.json",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search/index.js",
  "_bundle/search/langs/ar.js",
  "_bundle/search/langs/da.js",
  "_bundle/search/langs/de.js",
  "_bundle/search/langs/du.js",
  "_bundle/search/langs/el.js",
  "_bundle/search/langs/es.js",
  "_bundle/search/langs/fi.js",
  "_bundle/search/langs/fr.js",
  "_bundle/search/langs/he.js",
  "_bundle/search/langs/hi.js",
  "_bundle/search/langs/hu.js",
  "_bundle/search/langs/hy.js",
  "_bundle/search/langs/index.js",
  "_bundle/search/langs/it.js",
  "_bundle/search/langs/ja.js",
  "_bundle/search/langs/jp.js",
  "_bundle/search/langs/kn.js",
  "_bundle/search/langs/ko.js",
  "_bundle/search/langs/nl.js",
  "_bundle/search/langs/no.js",
  "_bundle/search/langs/pt.js",
  "_bundle/search/langs/ro.js",
  "_bundle/search/langs/ru.js",
  "_bundle/search/langs/sa.js",
  "_bundle/search/langs/sv.js",
  "_bundle/search/langs/ta.js",
  "_bundle/search/langs/te.js",
  "_bundle/search/langs/th.js",
  "_bundle/search/langs/tr.js",
  "_bundle/search/langs/vi.js",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "index.html",
  "page.html",
  "project/config.html"
]"
`;

exports[`Allow load custom resources md2html with custom resources 2`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]}},"router":{"pathname":"index.html","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with custom resources 3`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[{"name":"yfm","content":"builder"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"page.html","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with custom resources 4`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"project/config.html","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2md with custom resources 1`] = `
"[
  ".revision.meta.json",
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "index.yaml",
  "toc.yaml"
]"
`;

exports[`Allow load custom resources md2md with custom resources 2`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources md2md with custom resources 3`] = `
"title: Documentation
description: ''
meta:
  title: Documentation
  noIndex: true
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources md2md with custom resources 4`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
base: .
deepBase: 0
"
`;
